--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flake8 = "^7.1.1"
 black = "^24.10.0"
 mypy = "^1.13.0"
 fastapi = { extras = ["standard"], version = "^0.115.4" }
+bcrypt = "^4.2.0"
 
 
 [build-system]
