--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg2 = "^2.9.10"
 alembic = "^1.13.3"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
+zxcvbn = "^4.4.28"
 
 
 [build-system]
